--- a/django_pos/templates/expenses/expenses.html
+++ b/django_pos/templates/expenses/expenses.html
@@ -1,29 +1,27 @@
 {% extends "pos/base.html" %}
 {% load static %}
 <!-- Page title  -->
-{% block title %}Sales{% endblock title %}
+{% block title %}expenses{% endblock title %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
 <!-- Datatables -->
-<link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
-
 <link href="{% static 'vendor/datatables/dataTables.bootstrap4.min.css ' %}" rel="stylesheet">
 <link href="{% static 'css/pagination_buttons.css ' %}" rel="stylesheet">
 {% endblock stylesheets %}
 
 <!-- Page Heading -->
-{% block heading %}Sales{% endblock heading %}
+{% block heading %}expenses{% endblock heading %}
 
 <!-- Page content  -->
 {% block content %}
 
-    <!--Create new sale-->
+    <!--Create new expense-->
     <div class="row ml-0 mb-3">
-        <a href="{% url 'sales:sales_add' %}">
+        <a href="{% url 'expenses:expenses_add' %}">
             <button type="button" class="btn btn-success font-weight-bold">
                     <i class="fas fa-plus mr-2"></i>
-                    Create new sale
+                    Create new expense
             </button>
         </a>
     </div>
@@ -31,44 +29,71 @@
     <!-- DataTable -->
     <div class="card shadow mb-12">
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">Customers</h6>
+            <h6 class="m-0 font-weight-bold text-primary">expenses</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
                     <thead>
                         <tr>
+                            <th>ID</th>
                             <th style="width:5%">#</th>
-                            <th style="width:15%">ID</th>
-                            <th style="width:25%">Date</th>
-                            <th style="width:20%">Customer</th>
-                            <th class="text-center" style="width:10%">Total</th>
-                            <th class="text-center" style="width:5%">Items</th>
+                            <th style="width:20%">Name</th>
+                            <th style="width:15%">Date</th>
+                            <th style="width:15%">Group</th>
+                            <th style="width:25%">Description</th>
+                            <th class="text-center" style="width:10%">Amount</th>
                             <th class="text-center" style="width:10%">Actions</th>
                         </tr>
                     </thead>
                     <tbody>
-                        {% for s in sales %}
+                        {% for p in expenses %}
                         <tr>
+                            <td>{{p.id}}</td>
                             <td>{{forloop.counter}}</td>
-                            <td>{{s.id}}</td>
-                            <td>{{s.date_added}}</td>
-                            <td>{{s.customer.get_full_name}}</td>
-                            <td class="text-right" >{{s.grand_total}}</td>
-                            <td class="text-center" >{{s.sum_items}}</td>
+                            <td>{{p.name}}</td>
+                            <td>{{p.date_added}}</td>
+                            <td>{{p.group}}</td>
+                            <td>{{p.description}}</td>
+                            <td class="text-right">{{p.amount}} $</td>
                             <td class="text-center">
-                                <!--View-->
-                                <a href="{% url 'sales:sales_details' s.id %}" class="text-decoration-none">
-                                    <button type="button" class="btn btn-info btn-sm" data-bs-toggle="tooltip" title="Update sale">
-                                        <i class="fas fa-eye"></i>
+                                <!--Update-->
+                                <a href="{% url 'expenses:expenses_update' p.id %}" class="text-decoration-none">
+                                    <button  type="button" class="btn btn-warning btn-sm" data-bs-toggle="tooltip" title="Update expense">
+                                        <i class="fas fa-pen"></i>
                                     </button>
                                 </a>
-                                <!--Print receipt-->
-                                <a href="{% url 'sales:sales_receipt_pdf' s.id %}" class="text-decoration-none">
-                                    <button type="button" class="btn btn-dark btn-sm" data-bs-toggle="tooltip" title="View Receipt">
-                                        <i class="fas fa-receipt"></i>
+                                <!--Delete modal-->
+                                <!-- Button trigger modal -->
+                                <a class="text-decoration-none">
+                                    <button rel="delete" type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#exampleModal">
+                                        <i class="fas fa-trash"></i>
                                     </button>
                                 </a>
+                                    
+                                <!-- Modal -->
+                                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Delete expense</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div id="updateThisText" class="modal-body">
+                                            
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                            <a href="#" class="text-decoration-none">
+                                            <a id="updateThisURL" href="{% url 'expenses:expenses_delete' p.id %}" class="text-decoration-none">
+                                                <button  type="button"  class="btn btn-danger">Delete</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    </div>
+                                </div>
                             </td>
                         </tr>
                         {% endfor %}
@@ -82,9 +107,6 @@
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
 <!-- Datatables -->
-<script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
-
-
 <script src="{% static 'vendor/datatables/jquery.dataTables.min.js' %}"></script>
 <script src="{% static 'vendor/datatables/dataTables.bootstrap4.min.js' %}"></script>
 <!--Datatable buttons-->
@@ -101,10 +123,9 @@
 
 <!--Datatables-->
 <script>
-    
     // Call the dataTables jQuery plugin
     $(document).ready(function() {
-        tblCategories = $('#dataTable').DataTable({
+        tblexpenses = $('#dataTable').DataTable({
             dom: 'Bfrtip', // Buttons are draw at this element
             buttons: [
                 {
@@ -113,7 +134,7 @@
                 titleAttr: 'Print',
                 className: 'btn btn-info',
                 exportOptions: {
-                    columns: [ 0, 1, 2, 3 ,4, 5]
+                    columns: [ 0, 1, 2, 3 ,4 ]
                 }            
                 },
                 {
@@ -122,7 +143,7 @@
                     titleAttr: 'Download Excel',
                     className: 'btn btn-success ml-2',
                     exportOptions: {
-                        columns: [ 0, 1, 2, 3 ,4, 5 ]
+                        columns: [ 0, 1, 2, 3 ,4 ]
                     } 
                 },
                 {
@@ -135,7 +156,7 @@
                     pageSize: 'A4',
                     title: '*',
                     exportOptions: {
-                        columns: [ 0, 1, 2, 3 ,4 ,5]
+                        columns: [ 0, 1, 2, 3 ,4 ]
                     },
                     customize: function (doc) {
                         doc.styles = {
@@ -162,7 +183,7 @@
                                 alignment: 'center'
                             }
                         };
-                        doc.content[1].table.widths = ['10%', '10%', '30%', '20%', '20%', '10%'];
+                        doc.content[1].table.widths = ['10%', '10%', '30%', '30%', '20%'];
                         doc.content[1].margin = [0, 35, 0, 0];
                         doc.content[1].layout = {};
                         doc['footer'] = (function (page, pages) {
@@ -187,12 +208,33 @@
             deferRender: true,
             columnDefs: [
                 {
+                    targets: [0],
+                    visible: false,
+                    searchable: false,
+                },
+                {
                     targets: [-1], // column index (start from 0)
                     orderable: false, // set orderable false for selected columns
                 }
             ],
         });
     });
-    
+
+// Alert when trying to delete a expense
+$('#dataTable tbody')
+    // Event when whe try to delete a expense
+    // We update the text, and href of the modal delete button
+    .on('click', 'button[rel="delete"]', function () {
+    // Row variable
+    var tr = tblexpenses.cell($(this).closest('td, li')).index();
+    row_data = ( tblexpenses.row(tr.row).data());
+    expense_id = row_data[0];
+    expense_name = row_data[2]
+    new_delete_url  = 'delete/' + expense_id;
+    document.getElementById("updateThisText").innerHTML = "Are you sure you want to delete the expense:  " + expense_name + "?";
+    document.getElementById("updateThisURL").href=new_delete_url;
+    });
+
+
 </script>
 {% endblock javascripts %}
