--- a/django_pos/templates/productions/productions_add.html
+++ b/django_pos/templates/productions/productions_add.html
@@ -38,7 +38,7 @@
 
                     <div class="form-group col-md-6">
                         <label for="inputDescription">weight</label>
-                        <input type="number" class="form-control" name="weight" placeholder="Chicken Breasts..." required>
+                        <input type="number" class="form-control" name="weight" placeholder="10.00" required>
                         </select>
                     </div>
                 </div>
@@ -70,8 +70,8 @@
                 </div>
                 <div class="form-row">
                 <div class="form-group col-md-12">
-                    <label for="inputDescription">Description</label>
-                    <input type="text" name="description" class="form-control" placeholder="Freshness Guaranteed Chicken Breast, 2.25 - 3.2 lb..." required>
+                    <label for="inputDescription">Remarks</label>
+                    <textarea name="description" class="form-control" rows="3" required></textarea>
                 </div>
                 </div>
 
