--- a/django_pos/templates/customers/customers_add.html
+++ b/django_pos/templates/customers/customers_add.html
@@ -44,14 +44,14 @@
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputDescription">Phone number</label>
-                        <input type="text" name="phone" class="form-control" placeholder="(412) 727-2736" required>
+                        <input type="text" name="phone" class="form-control" placeholder="+254 727-2736" required>
                     </div>
                 </div>
 
                 <div class="form-row">
                     <div class="form-group col-md-12">
                         <label for="inputDescription">Address</label>
-                        <textarea name="address" class="form-control" placeholder="5340 Brett Dr #A Fort Knox, Kentucky(KY), 40121 ..." rows="2" required></textarea>
+                        <textarea name="address" class="form-control" placeholder="13-40403, Kisumu..." rows="2" required></textarea>
                     </div>
                 </div>
                 
