--- a/django_pos/templates/employees/employees_add.html
+++ b/django_pos/templates/employees/employees_add.html
@@ -44,14 +44,14 @@
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputDescription">Phone number</label>
-                        <input type="text" name="phone" class="form-control" placeholder="(412) 727-2736" required>
+                        <input type="text" name="phone" class="form-control" placeholder="(254) 727-2736" required>
                     </div>
                 </div>
 
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputDescription">salary</label>
-                        <input type="number" name="salary" class="form-control" placeholder="(412) 727-2736" required>
+                        <input type="number" name="salary" class="form-control" placeholder="10.00" required>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputDescription">Shop</label>
