--- a/django_pos/templates/employees/shops_add.html
+++ b/django_pos/templates/employees/shops_add.html
@@ -30,7 +30,7 @@
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputDescription">Name</label>
-                        <input type="text" class="form-control" name="name" placeholder="Drinks..." required>
+                        <input type="text" class="form-control" name="name" placeholder="Butchery1..." required>
                     </div>
 
                     <div class="form-group col-md-6">
@@ -62,8 +62,9 @@
                 <div class="form-row">
 
                     <div class="form-group col-md-12">
-                        <label for="inputDescription">Description</label>
-                        <input type="text" name="description" class="form-control" placeholder="Drinks and beverages.." required>
+                        <label for="inputDescription">Remarks</label>
+                        <textarea name="description" class="form-control" rows="3" required></textarea>
+
                     </div>
                 </div>
                
