--- a/django_pos/templates/expenses/capitals_add.html
+++ b/django_pos/templates/expenses/capitals_add.html
@@ -1,19 +1,19 @@
 {% extends "pos/base.html" %}
 
 <!-- Page title  -->
-{% block title %}Add category{% endblock title %}
+{% block title %}Add capital{% endblock title %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
 
 <!-- Page Heading -->
-{% block heading %}Add category{% endblock heading %}
+{% block heading %}Add capital{% endblock heading %}
 
 <!-- Page content  -->
 {% block content %}
 <!--Go back-->
 <div class="row ml-0 mb-3">
-    <a href="{% url 'products:categories_list' %}">
+    <a href="{% url 'expenses:capitals_list' %}">
         <button type="button" class="btn btn-info font-weight-bold">
             <i class="fas fa-long-arrow-alt-left mr-2"></i>
             Go back
@@ -25,31 +25,28 @@
 <div class="row">
     <div class="card col-md-8">
         <div class="card-body">
-            <form action="{% url 'products:categories_add' %}"  method="post">
+            <form action="{% url 'expenses:capitals_add' %}"  method="post">
                 {% csrf_token %}
                 <div class="form-row">
-                    <div class="form-group col-md-8">
-                        <label for="inputDescription">Name</label>
-                        <input type="text" class="form-control" name="name" placeholder="Cow..." required>
+                    <div class="form-group col-md-6">
+                        <label for="inputDescription">Source</label>
+                        <input type="text" class="form-control" name="source" placeholder="Savings..." required>
                     </div>
-                    <div class="form-group col-md-4">
-                        <label for="state">State</label>
-                        <select name="state" class="form-control" required>
-                            {% for status in category_status %}
-                            <option value="{{status.0}}">{{status.1}}</option>
-                            {% endfor %}
-                        </select>
+                    <div class="form-group col-md-6">
+                        <label for="inputDescription">Amount</label>
+                        <input type="number" class="form-control" name="amount" placeholder="10.00..." required>
                     </div>
+                    
                 </div>
 
                 <div class="form-row">
                     <div class="form-group col-md-12">
-                        <label for="inputDescription">Description</label>
+                        <label for="inputDescription">Remarks</label>
                         <textarea name="description" class="form-control" rows="3" required></textarea>
                     </div>
                 </div>
                
-                <button type="submit" class="btn btn-success font-weight-bold">Create category</button>
+                <button type="submit" class="btn btn-success font-weight-bold">Create capital</button>
                
             </form>
         </div>
