--- a/django_pos/templates/expenses/groups_add.html
+++ b/django_pos/templates/expenses/groups_add.html
@@ -1,19 +1,19 @@
 {% extends "pos/base.html" %}
 
 <!-- Page title  -->
-{% block title %}Add sector{% endblock title %}
+{% block title %}Add group{% endblock title %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
 
 <!-- Page Heading -->
-{% block heading %}Add sector{% endblock heading %}
+{% block heading %}Add group{% endblock heading %}
 
 <!-- Page content  -->
 {% block content %}
 <!--Go back-->
 <div class="row ml-0 mb-3">
-    <a href="{% url 'productions:sectors_list' %}">
+    <a href="{% url 'expenses:groups_list' %}">
         <button type="button" class="btn btn-info font-weight-bold">
             <i class="fas fa-long-arrow-alt-left mr-2"></i>
             Go back
@@ -25,17 +25,17 @@
 <div class="row">
     <div class="card col-md-8">
         <div class="card-body">
-            <form action="{% url 'productions:sectors_add' %}"  method="post">
+            <form action="{% url 'expenses:groups_add' %}"  method="post">
                 {% csrf_token %}
                 <div class="form-row">
                     <div class="form-group col-md-8">
                         <label for="inputDescription">Name</label>
-                        <input type="text" class="form-control" name="name" placeholder="Mutton..." required>
+                        <input type="text" class="form-control" name="name" placeholder="Transport..." required>
                     </div>
                     <div class="form-group col-md-4">
                         <label for="state">State</label>
                         <select name="state" class="form-control" required>
-                            {% for status in sector_status %}
+                            {% for status in group_status %}
                             <option value="{{status.0}}">{{status.1}}</option>
                             {% endfor %}
                         </select>
@@ -44,12 +44,12 @@
 
                 <div class="form-row">
                     <div class="form-group col-md-12">
-                        <label for="inputDescription">Description</label>
-                        <input type="text" name="description" class="form-control" placeholder="...." required>
+                        <label for="inputDescription">Remarks</label>
+                        <textarea name="description" class="form-control" rows="3" required></textarea>
                     </div>
                 </div>
                
-                <button type="submit" class="btn btn-success font-weight-bold">Create sector</button>
+                <button type="submit" class="btn btn-success font-weight-bold">Create group</button>
                
             </form>
         </div>
