--- a/django_pos/templates/products/products_add.html
+++ b/django_pos/templates/products/products_add.html
@@ -29,7 +29,7 @@
                 <div class="form-row">
                     <div class="form-group col-md-8">
                         <label for="inputDescription">Name</label>
-                        <input type="text" class="form-control" name="name" placeholder="Chicken Breasts..." required>
+                        <input type="text" class="form-control" name="name" placeholder="Chicken..." required>
                     </div>
                     <div class="form-group col-md-4">
                         <label for="state">State</label>
@@ -44,7 +44,7 @@
                 <div class="form-row">
                     <div class="form-group col-md-8">
                         <label for="inputDescription">Description</label>
-                        <input type="text" name="description" class="form-control" placeholder="Freshness Guaranteed Chicken Breast, 2.25 - 3.2 lb..." required>
+                        <input type="text" name="description" class="form-control" placeholder="Frech Chicken.." required>
                     </div>
                     <div class="form-group col-md-4">
                         <label for="category">Category</label>
