--- a/templates/productions/productions_update.html
+++ b/templates/productions/productions_update.html
@@ -72,7 +72,7 @@
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputPrice">Price</label>
-                        <input type="number" name="total_price" step="any"  class="form-control" value="{{production.price}}"  required>
+                        <input type="number" name="total_price" step="any"  class="form-control" value="{{production.total_price}}"  required>
                     </div>
                 </div>
                 
