--- a/templates/sales/sales_add.html
+++ b/templates/sales/sales_add.html
@@ -204,66 +204,81 @@
             $('input[name="grand_total"]').val(this.items.grand_total);
         },
         // Adds a product to the sale object
-        add_product: function (item) {
-            this.items.products.push(item);
-            this.list_product();
-        },
-        // Shows the selected product in the table
-        list_product: function () {
-            // Calculate the sale 
-            this.calculate_sale();
+add_product: function (item) {
+    this.items.products.push(item);
+    this.list_product();
+},
 
-            tblProducts = $("#table_products").DataTable({
-                destroy: true,
-                data: this.items.products,
-                columns: [
-                    {"data": "number"}, 
-                    {"data": "name"},
-                    {"data": "price"},
-                    {"data": "quantity"},
-                    {"data": "total_product"},
-                    {"data": "id"},
-                ],
-                columnDefs: [
-                    {
-                        // Quantity
-                        class: 'text-center',
-                        targets: [3], 
-                        render: function (data, type, row){
-                            return '<input name="quantity" type="text" class="form-control form-control-xs text-center input-sm" autocomplete="off" value="'+row.quantity+'">';
-                        },                      
-                    },
-                    {
-                        //Product price an total
-                        class: 'text-right',
-                        targets: [2,4],
-                        render: function (data, type, row){
-                            return parseFloat(data).toFixed(2) + ' $';
-                        },
-                    },
-                    {
-                        //Delete button
-                        class: 'text-center',
-                        targets: [-1],
-                        orderable: false,
-                        render: function (data, type, row){
-                            return '<a rel="delete" type="button" class="btn btn-sm btn-danger" data-bs-toggle="tooltip" title="Delete product"> <i class="fas fa-trash-alt fa-xs"></i> </a>';
-                        },
-                    },
+// Shows the selected product in the table
+list_product: function () {
+    // Calculate the sale 
+    this.calculate_sale();
 
-                ],
-                rowCallback(row, data, displayNun, displayIndex, dataIndex){
-                    $(row).find(("input[name='quantity']")).TouchSpin({
-                        min: 1,
-                        max: 100, //Máximo de acuerdo al stock de cada producto
-                        step: 1,
-                        decimals: 0,
-                        boostat: 1,
-                        maxboostedstep: 3,
-                        postfix: ''
-                    });
+    tblProducts = $("#table_products").DataTable({
+        destroy: true,
+        data: this.items.products,
+        columns: [
+            {"data": "number"}, 
+            {"data": "name"},
+            {
+                "data": "price",
+                render: function(data, type, row) {
+                    return '<input name="price" type="text" class="form-control form-control-xs text-center input-sm" autocomplete="off" value="' + data + '">';
+                }
+            },
+            {"data": "quantity"},
+            {"data": "total_product"},
+            {"data": "id"},
+        ],
+        columnDefs: [
+            // Quantity
+            {
+                class: 'text-center',
+                targets: [3], 
+                render: function (data, type, row){
+                    return '<input name="quantity" type="text" class="form-control form-control-xs text-center input-sm" autocomplete="off" value="' + row.quantity + '">';
+                },                      
+            },
+            // Product price and total
+            {
+                class: 'text-right',
+                targets: [4],
+                render: function (data, type, row){
+                    return parseFloat(data).toFixed(2) + ' $';
                 },
-            })
+            },
+            // Delete button
+            {
+                class: 'text-center',
+                targets: [-1],
+                orderable: false,
+                render: function (data, type, row){
+                    return '<a rel="delete" type="button" class="btn btn-sm btn-danger" data-bs-toggle="tooltip" title="Delete product"> <i class="fas fa-trash-alt fa-xs"></i> </a>';
+                },
+            },
+        ],
+        rowCallback(row, data, displayNun, displayIndex, dataIndex){
+            $(row).find(("input[name='quantity']")).TouchSpin({
+                min: 1,
+                max: 100, // Maximum according to each product's stock
+                step: 1,
+                decimals: 0,
+                boostat: 1,
+                maxboostedstep: 3,
+                postfix: ''
+            });
+
+            $(row).find(("input[name='price']")).on('keyup change', function() {
+                var price = parseFloat($(this).val());
+                if (!isNaN(price)) {
+                    var tr = tblProducts.cell($(this).closest('td, li')).index();
+                    sale.items.products[tr.row].price = price;
+                    sale.calculate_sale();
+                    $('td:eq(4)', tblProducts.row(tr.row).node()).html(sale.items.products[tr.row].total_product + ' $');
+                }
+            });
+        },
+    });
             
             // IDs de productos ya seleccionados para exlcuir en la busqueda
             //console.log("this.traer_ids()");
@@ -484,9 +499,9 @@
             };
             
             // Only allow to send if the payed amount is equal or greater than the total
-            if ($('[name="amount_payed"]').val() <= $('[name="grand_total"]').val()) {
+            if (parseFloat($('[name="amount_payed"]').val()).toFixed(2) < parseFloat($('[name="grand_total"]').val()).toFixed(2)) {
                 Swal.fire({
-                    title: 'Payable Amount is lower that the Grand Total',
+                    title: 'Payable Amount is lower than the Grand Total',
                     icon: 'warning',
                 });
                 return false;
