--- a/templates/pos/sidebar.html
+++ b/templates/pos/sidebar.html
@@ -5,7 +5,7 @@
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'pos:index' %}">
         <div class="sidebar-brand-icon ">
-            <img src="{% static 'img/logo.png' %}" alt="Logo" class="img-fluid" style="max-width: 50px;">
+            <img src="data:static/mg/png;base64,{{ company_logo }}" alt="Logo" class="img-fluid" style="max-width: 50px;">
         </div>
         <div class="sidebar-brand-text mx-3">Katieno Butchery</div>
     </a>
