--- a/templates/purchases/purchases_details.html
+++ b/templates/purchases/purchases_details.html
@@ -49,6 +49,7 @@
                                                 <th>#</th>
                                                 <th>Name</th>
                                                 <th>Price</th>
+                                                <th>Weight (KG)</th>
                                                 <th>Quantity</th>
                                                 <th>Total</th>
                                                 </tr>
@@ -59,6 +60,7 @@
                                                 <td>{{forloop.counter}}</td>
                                                 <td>{{detail.product.name}}</td>
                                                 <td>{{detail.price}}</td>
+                                                <td>{{detail.weight}}</td>
                                                 <td class="text-center">{{detail.quantity}}</td>
                                                 <td>{{detail.total_detail}}</td>
                                             </tr>
