--- a/templates/sales/sales_add.html
+++ b/templates/sales/sales_add.html
@@ -65,6 +65,7 @@
                                                 <th>Name</th>
                                                 <th>Price</th>
                                                 <th>Quantity</th>
+                                                <th>Weight</th>
                                                 <th>Total</th>
                                                 <th class="text-center">Delete</th>
                                                 </tr>
@@ -227,6 +228,12 @@ list_product: function () {
                 }
             },
             {"data": "quantity"},
+            {
+                "data": "weight",
+                render: function (data, type, row) {
+                    return '<input name="weight" type="text" class="form-control form-control-xs text-center input-sm" autocomplete="off" value="' + data + '">';
+                }
+            },
             {"data": "total_product"},
             {"data": "id"},
         ],
@@ -242,7 +249,7 @@ list_product: function () {
             // Product price and total
             {
                 class: 'text-right',
-                targets: [4],
+                targets: [5],
                 render: function (data, type, row){
                     return parseFloat(data).toFixed(2) + ' $';
                 },
@@ -274,7 +281,7 @@ list_product: function () {
                     var tr = tblProducts.cell($(this).closest('td, li')).index();
                     sale.items.products[tr.row].price = price;
                     sale.calculate_sale();
-                    $('td:eq(4)', tblProducts.row(tr.row).node()).html(sale.items.products[tr.row].total_product + ' $');
+                    $('td:eq(5)', tblProducts.row(tr.row).node()).html(sale.items.products[tr.row].total_product + ' $');
                 }
             });
         },
@@ -360,7 +367,7 @@ list_product: function () {
                 // Calculate the sale with the new quantity
                 sale.calculate_sale();
                 // Find the row to update the product total
-                $('td:eq(4)', tblProducts.row(tr.row).node()).html(sale.items.products[tr.row].total_product + ' $');
+                $('td:eq(5)', tblProducts.row(tr.row).node()).html(sale.items.products[tr.row].total_product + ' $');
         });
 
         // Delete all products
