--- a/templates/sales/sales_receipt_pdf.html
+++ b/templates/sales/sales_receipt_pdf.html
@@ -19,15 +19,10 @@
 
         .name-company {
             font-size: 25px;
-            <!--
-                padding: 0;
-                margin: 0;
-            -->
             font-weight: bold;
             text-transform: uppercase;
-            <!--
             text-align: center;
-            -->
+            margin-top: 10px;
         }
 
         table thead tr th {
@@ -42,9 +37,12 @@
 
         .img-logo {
             margin-top: 10px;
-            width: 75px;
-            height: 75px;
+            width: 150px;
+            height: 100px;
             margin-bottom: 10px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
 
     </style>
@@ -53,13 +51,16 @@
 <div class="container-fluid">
     <div class="row border border-dark">
         <div class="col-6">
-            <p class="name-company"><b>Katieno Butchery</b></p>
-            <p><b>1516-401007678-Nyalenda </b></p>
+            
+            <img src="data:image/png;base64,{{ company_logo }}" alt="Company Logo" class="img-logo">
+            <p><b>Katieno Butchery</b></p>
+            <p><b>1516-401007678-Nyalenda</b></p>
             <p><b>Kisumu, Kenya</b></p>
             <p><b>Phone:</b> (+254) 712-012-485</p>
             <p><b>Email:</b> katienoentreprise@gmail.com</p>
         </div>
         <div class="col-6 border-left border-dark">
+            <p class="name-company"><b>Sale Receipt </b></p>
             <p><b>Date:</b> {{sale.date_added}}</p>
             <p><b>Sale ID:</b> {{sale.id}}</p>
             <p><b>Customer:</b> {{sale.customer.get_full_name}}</p>
@@ -73,7 +74,8 @@
         <thead>
         <tr style="border: 1px solid black;">
             <th style="width: 5%;" class="text-center">#</th>
-            <th style="width: 40%;" class="text-left pl-2">Product</th>
+            <th style="width: 45%;" class="text-left pl-2">Product</th>
+            <th style="width: 5%;" class="text-center">Weight(KG)</th>
             <th style="width: 5%;" class="text-center">Quantity</th>
             <th style="width: 20%;" class="text-right pr-2">Price</th>
             <th style="width: 20%;" class="text-right pr-2">Total</th>
@@ -84,30 +86,31 @@
             <tr>
                 <td class="text-center">{{forloop.counter}}</td>
                 <td class="text-left pl-2">{{d.product.name}}</td>
+                <td class="text-center">{{d.weight}}</td>
                 <td class="text-center">{{d.quantity}}</td>
-                <td class="text-right pr-2 ">{{d.price}} $</td>
-                <td class="text-right pr-2">{{d.total_detail}} $</td>
+                <td class="text-right pr-2">{{d.price}} Ksh</td>
+                <td class="text-right pr-2">{{d.total_detail}} Ksh</td>
             </tr>
         {% endfor %}
         <tr>
             <td colspan="4" class="text-right pr-2"><b>Subtotal</b></td>
-            <td class="text-right pr-2">{{sale.sub_total|floatformat:2}} $</td>
+            <td class="text-right pr-2">{{sale.sub_total|floatformat:2}} Ksh</td>
         </tr>
         <tr>
             <td colspan="4" class="text-right pr-2"><b>Tax Inclusive ({{sale.tax_percentage}}%)</b></td>
-            <td class="text-right pr-2">{{sale.tax_amount|floatformat:2}} $</td>
+            <td class="text-right pr-2">{{sale.tax_amount|floatformat:2}} Ksh</td>
         </tr>
         <tr>
             <td colspan="4" class="text-right pr-2"><b>Grand Total</b></td>
-            <td class="text-right pr-2">{{ sale.grand_total }} $</td>
+            <td class="text-right pr-2">{{ sale.grand_total }} Ksh</td>
         </tr>
         <tr>
-            <td colspan="4" class="text-right pr-2"><b>Amount payed</b></td>
-            <td class="text-right pr-2">{{ sale.amount_payed }} $</td>
+            <td colspan="4" class="text-right pr-2"><b>Amount paid</b></td>
+            <td class="text-right pr-2">{{ sale.amount_paid }} Ksh</td>
         </tr>
         <tr>
             <td colspan="4" class="text-right pr-2"><b>Change</b></td>
-            <td class="text-right pr-2">{{ sale.amount_change }} $</td>
+            <td class="text-right pr-2">{{ sale.amount_change }} Ksh</td>
         </tr>
         <tr>
             <td colspan="5">
