--- a/staticfiles/scss/_login.scss
+++ b/staticfiles/scss/_login.scss
@@ -5,6 +5,9 @@
   background: url($login-image);
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
+  
+ 
 }
 
 .bg-register-image {
