correct amount payed

--- a/templates/purchases/purchases_receipt_pdf.html
+++ b/templates/purchases/purchases_receipt_pdf.html
@@ -106,7 +106,7 @@
         </tr>
         <tr>
             <td colspan="4" class="text-right pr-2"><b>Amount paid</b></td>
-            <td class="text-right pr-2">{{ purchase.amount_paid }} Ksh</td>
+            <td class="text-right pr-2">{{ purchase.amount_payed }} Ksh</td>
         </tr>
         <tr>
             <td colspan="4" class="text-right pr-2"><b>Change</b></td>
